changed font color navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="rounded opacity-50 border-transparent">Search</button>
         </form>
     </header>
-    <nav class="navbar navbar-expand-lg ps-3">
+    <nav class="navbar navbar-dark navbar-expand-lg ps-3 h5">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
